fixed the footer nav section to complete html portion of assignment

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
     <!-- footer -->
     <footer>
         <h3>Sweet Eats Bakery</h3>
-        <div class="nav">
-            <div class="links">
-                <a href="#about">About</a>
-                <a href="#cookies">Cookies</a>
-                <a href="#celebrations">Celebrations</a>
-                <a href="#catering">Catering</a>
-                <a href="#contact">Contact</a>
+        <nav>
+            <div class="Links">
+                <a href="#about">#About</a>
+                <a href="#cookies">#Cookies</a>
+                <a href="#celebrations">#Celebrations</a>
+                <a href="#catering">#Catering</a>
+                <a href="#contact">#Contact</a>
             </div>
-        </div>
+        </nav>
         <div class="copyright">
             <p>Copyright Sweet Eats 2018</p>
         </div>
